--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -22,7 +22,9 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" >
 
             <ImageView
                 android:layout_width="match_parent"
@@ -32,6 +34,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
                 android:adjustViewBounds="true"
+                android:layout_marginBottom="10dp"
                 android:cropToPadding="false" />
 
             <Button
@@ -43,7 +46,8 @@
                 android:background="@drawable/boton_amarillo_custom"
                 android:layout_above="@+id/correo"
                 android:paddingBottom="5dp"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="10dp"/>
 
             <Button
                 android:text="@string/editar_preferencias"
@@ -52,13 +56,15 @@
                 android:id="@+id/button5"
                 android:paddingBottom="5dp"
                 android:background="@drawable/boton_amarillo_custom"
-                android:onClick="editarPreferencias" />
+                android:onClick="editarPreferencias"
+                android:layout_marginBottom="10dp"/>
 
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:text="@string/DEFAULT_EMAIL"
                 android:ems="10"
+                android:layout_marginBottom="10dp"
                 android:id="@+id/correoLabel"
                 />
 
@@ -68,6 +74,7 @@
                 android:layout_width="match_parent"
                 android:text="@string/DEFAULT_GRUPOS"
                 android:ems="10"
+                android:layout_marginBottom="10dp"
                 android:id="@+id/correo"
                 />
 
@@ -76,6 +83,7 @@
                     android:layout_width="match_parent"
                     android:text="@string/nickname"
                     android:ems="10"
+                    android:layout_marginBottom="10dp"
                     android:id="@+id/nickNameLabel"
                     />
                 <EditText
@@ -83,6 +91,7 @@
                     android:layout_width="match_parent"
                     android:text="@string/DEFAULT_NOMBRE_USUARIO"
                     android:ems="10"
+                    android:layout_marginBottom="10dp"
                     android:id="@+id/nickName"
                     />
 
@@ -91,6 +100,7 @@
                 android:layout_width="match_parent"
                 android:text="@string/bio"
                 android:ems="10"
+                android:layout_marginBottom="10dp"
                 android:id="@+id/bioLabel"
                 />
 
@@ -101,6 +111,7 @@
                 android:inputType="textMultiLine"
                 android:text="@string/DEFAULT_GRUPOS"
                 android:ems="10"
+                android:layout_marginBottom="10dp"
                 android:id="@+id/bio"
                 />
             <Button
@@ -110,6 +121,7 @@
                 android:paddingBottom="5dp"
                 android:background="@drawable/boton_amarillo_custom"
                 android:id="@+id/buttonSave"
+                android:layout_marginBottom="10dp"
                 android:onClick="guardarInfo"
                 />
 
@@ -120,6 +132,7 @@
                 android:background="@drawable/boton_amarillo_custom"
                 android:id="@+id/buttonRestart"
                 android:paddingBottom="5dp"
+                android:layout_marginBottom="10dp"
                 android:onClick="restartPassword"
             />
 
@@ -128,7 +141,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/holo_red_dark"
-                android:id="@+id/borrarCuenta" />
+                android:id="@+id/borrarCuenta"
+                android:layout_marginBottom="10dp"/>
 
 
         </LinearLayout>
