--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -34,7 +34,7 @@
                 android:textColor="#000"
                 android:layout_below="@+id/imagenGrupo"
                 android:layout_alignParentStart="true"
-                android:layout_height="55dp"
+                android:layout_height="wrap_content"
                 android:textStyle="normal|bold"
                 android:layout_marginTop="5dp" />
 
@@ -269,7 +269,7 @@
                 android:layout_width="match_parent"
                 android:id="@+id/event"
                 android:layout_below="@+id/layoutEventos"
-                android:layout_height="120dp"
+                android:layout_height="240dp"
                 android:divider="@android:color/transparent"
                 android:dividerHeight="7.0sp"
                 android:layout_marginLeft="5dp"
